docs: MEMORY à jour — MainScreen interactif atteint (Spine réel, ABI PerBlue)
Co-Authored-By: Claude <noreply@anthropic.com>